; ModuleID = '/home/carl/AnghaBench/sqlcipher/test/extr_wordcount.c_allLoop.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/test/extr_wordcount.c_allLoop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MODE_ALL = common dso_local global i32 0, align 4
@MODE_COUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32*, i32*)* @allLoop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @allLoop(i32 %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @MODE_ALL, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %23

14:                                               ; preds = %4
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %15, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  store i32 0, i32* %5, align 4
  br label %40

19:                                               ; preds = %14
  %20 = load i32, i32* %6, align 4
  %21 = load i32*, i32** %8, align 8
  store i32 %20, i32* %21, align 4
  %22 = load i32*, i32** %7, align 8
  store i32 1, i32* %22, align 4
  store i32 1, i32* %5, align 4
  br label %40

23:                                               ; preds = %4
  %24 = load i32*, i32** %7, align 8
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @MODE_COUNT, align 4
  %27 = mul nsw i32 %26, 2
  %28 = icmp sge i32 %25, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  store i32 0, i32* %5, align 4
  br label %40

30:                                               ; preds = %23
  %31 = load i32*, i32** %7, align 8
  %32 = load i32, i32* %31, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %31, align 4
  store i32 %32, i32* %10, align 4
  %34 = load i32, i32* %10, align 4
  %35 = and i32 %34, 1
  %36 = load i32*, i32** %9, align 8
  store i32 %35, i32* %36, align 4
  %37 = load i32, i32* %10, align 4
  %38 = ashr i32 %37, 1
  %39 = load i32*, i32** %8, align 8
  store i32 %38, i32* %39, align 4
  store i32 1, i32* %5, align 4
  br label %40

40:                                               ; preds = %30, %29, %19, %18
  %41 = load i32, i32* %5, align 4
  ret i32 %41
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
